; ModuleID = '/home/carl/AnghaBench/lab/q3map2/libs/picomodel/lwo/extr_vecmath.c_normalize.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/libs/picomodel/lwo/extr_vecmath.c_normalize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @normalize(float* %0) #0 {
  %2 = alloca float*, align 8
  %3 = alloca float, align 4
  store float* %0, float** %2, align 8
  %4 = load float*, float** %2, align 8
  %5 = load float*, float** %2, align 8
  %6 = call i32 @dot(float* %4, float* %5)
  %7 = call i64 @sqrt(i32 %6)
  %8 = sitofp i64 %7 to float
  store float %8, float* %3, align 4
  %9 = load float, float* %3, align 4
  %10 = fcmp ogt float %9, 0.000000e+00
  br i1 %10, label %11, label %27

11:                                               ; preds = %1
  %12 = load float, float* %3, align 4
  %13 = load float*, float** %2, align 8
  %14 = getelementptr inbounds float, float* %13, i64 0
  %15 = load float, float* %14, align 4
  %16 = fdiv float %15, %12
  store float %16, float* %14, align 4
  %17 = load float, float* %3, align 4
  %18 = load float*, float** %2, align 8
  %19 = getelementptr inbounds float, float* %18, i64 1
  %20 = load float, float* %19, align 4
  %21 = fdiv float %20, %17
  store float %21, float* %19, align 4
  %22 = load float, float* %3, align 4
  %23 = load float*, float** %2, align 8
  %24 = getelementptr inbounds float, float* %23, i64 2
  %25 = load float, float* %24, align 4
  %26 = fdiv float %25, %22
  store float %26, float* %24, align 4
  br label %27

27:                                               ; preds = %11, %1
  ret void
}

declare dso_local i64 @sqrt(i32) #1

declare dso_local i32 @dot(float*, float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
